<resources>
    <string name="app_name">FoodiePlan</string>
    <string name="default_web_client_id">\"314988652841-kkros69rc40pr1fi8h1pjqs14fqegk2b.apps.googleusercontent.com\"</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="redirect_to_login">Already an user? Login</string>
    <string name="daily_inspiration">Daily Inspiration For You</string>
    <string name="meal_name">Name Of The Meal</string>
    <string name="country_meals">Meals That Popular in Your Country</string>
    <string name="key_meal_id">Key Meal Id</string>
    <string name="meals_interesting">Meals That You Are Interesting In :</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="continue_as_a_guest">Continue As a Guest</string>
    <string name="plan">Plan</string>
    <string name="favorite">Favorite</string>
    <string name="search">Search</string>
    <string name="planned_meals">Planned Meals</string>
    <string name="favourite_meals">Favourite Meals</string>
    <string name="filter_meals">Filter Meals</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="home">Home</string>
    <string name="delete_favourite">Delete Favourite</string>
    <string name="not_registered">Not yet registered? SignUp Now</string>
    <string name="category">Category</string>
    <string name="country">Country</string>
    <string name="countries">Countries</string>
    <string name="categories">Categories</string>
    <string name="ingredients">Ingredients</string>
    <string name="meals_instructions">Meals Instructions</string>
    <string name="meals_country">Meals That Popular In Your Country</string>
    <string name="user_name">Name:</string>
    <string name="user_email">Email:</string>
    <string name="logout">Logout</string>
    <string name="logout_ask">Are You Sure that you want to logout ?</string>
    <string name="yes">Yes</string>
    <string name="see_you">See You Soon !</string>
    <string name="no">No</string>
    <string name="apply">Apply</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="language">Language</string>
    <string name="displaying_mode">Displaying Mode</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="home_fragment">Home</string>
    <string name="settings_bottom_sheet">Settings</string>
    <string name="plan_fragment">Plan</string>
    <string name="search_fragment">Search</string>
    <string name="filter_fragment">Filter</string>
    <string name="details_fragment">Details</string>
    <string name="signup">Signup</string>
    <string name="about_us_description">Welcome to our Meal Planner app!\n\n
    Our app is designed to help you plan your weekly meals efficiently. Here\'s what our app offers:\n\n
    1. Meal of the Day: Get inspired with a new meal suggestion every day!\n
    2. Search Functionality: Easily search for meals based on country, ingredient, or category.\n
    3. Categories and Countries: Explore popular meals by categories and countries.\n
    4. Favorite Meals: Save your favorite meals to browse them later, even offline!\n
    5. Data Sync: Backup and synchronize your meal plans across devices using Firebase.\n
    6. Weekly Meal Planning: Plan your meals for the current week with ease.\n
    7. Offline Support: Access your favorite meals and weekly plan even without network connectivity.\n
    8. Authentication: Sign up or log in using your email or social media accounts.\n
    9. Guest Mode: Use the app as a guest to explore categories, search, and view the meal of the day.\n
    10. Detailed Meal Information: View meal details including name, image, origin country, ingredients, steps, and video.\n
    11. Splash Screen: Enjoy a stylish splash screen animation powered by Lottie.\n\n
    We hope you enjoy using our app to simplify your meal planning experience!\n\n
    Happy Cooking!</string>
    <string name="ok">OK</string>
    <string name="confirm_guest">Are You Sure that you want to Sign In With New Account?\n\nif you do so all guest mode progress will be lost.</string>
    <string name="guest_mode">Guest Mode</string>
    <string name="no_video">Sorry, but we don\'t have a video of this meal.</string>
</resources>