<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.MainActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/backgroundColor">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/loginText"
                style="@style/App.TitleTextView"
                android:text="@string/login" />

            <include
                android:id="@+id/i_email"
                layout="@layout/layout_email" />

            <include
                android:id="@+id/i_password"
                layout="@layout/layout_password" />

            <Button
                android:id="@+id/btn_login"
                style="@style/App.AuthenticationButton"
                android:text="@string/login" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login_with_google"
                style="@style/App.GoogleButton"
                android:text="@string/continue_with_google"
                app:icon="@drawable/ic_google"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_guest_login"
                style="@style/App.GoogleButton"
                app:icon="@drawable/incognito_circle"
                android:text="@string/continue_as_a_guest" />

            <TextView
                android:id="@+id/tv_redirect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="20dp"
                android:padding="8dp"
                android:text="@string/not_registered"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/av"
        style="@style/LottieAnimation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_rawRes="@raw/animation_loading" />

</androidx.constraintlayout.widget.ConstraintLayout>