<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.profile.view.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_profile"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/ib_logout"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:background="@android:color/transparent"
            android:scaleType="centerCrop"
            tools:src="@drawable/ic_logout_black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/iv_profile"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="@dimen/spacing_xxxlarge"
            android:padding="6dp"
            android:scaleType="centerCrop"
            android:src="@drawable/profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:riv_border_width="2dp"
            app:riv_corner_radius="50dp" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/user_name"
            android:textAlignment="center"
            android:textColor="@color/titleColor"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_profile" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/spacing_large"
            android:textColor="@color/descriptionColor"
            android:textSize="24sp"
            android:layout_marginStart="@dimen/spacing_medium"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/name"
            app:layout_constraintStart_toEndOf="@id/name"
            app:layout_constraintTop_toTopOf="@id/name" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/user_email"
            android:textAlignment="center"
            android:textColor="@color/titleColor"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/spacing_large"
            android:textColor="@color/descriptionColor"
            android:textSize="24sp"
            android:layout_marginStart="@dimen/spacing_medium"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/email"
            app:layout_constraintStart_toEndOf="@id/email"
            app:layout_constraintTop_toTopOf="@id/email" />


        <ImageView
            android:id="@+id/iv_favourite"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            tools:src="@drawable/ic_black_heart"
            app:layout_constraintEnd_toStartOf="@id/iv_plan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <ImageButton
            android:id="@+id/iv_plan"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="96dp"
            android:background="@android:color/transparent"
            tools:src="@drawable/ic_calendar_black"
            app:iconSize="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_favourite"
            app:layout_constraintTop_toTopOf="@+id/iv_favourite" />

        <TextView
            android:id="@+id/tv_num_of_favourites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            tools:text="0"
            android:textColor="@color/descriptionColor"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/iv_favourite"
            app:layout_constraintStart_toStartOf="@+id/iv_favourite"
            app:layout_constraintTop_toBottomOf="@+id/iv_favourite" />

        <TextView
            android:id="@+id/tv_num_of_plan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            tools:text="0"
            android:textColor="@color/descriptionColor"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/iv_plan"
            app:layout_constraintStart_toStartOf="@id/iv_plan"
            app:layout_constraintTop_toBottomOf="@+id/iv_plan" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/av_sign_up"
        style="@style/LottieAnimation"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16"
        app:lottie_rawRes="@raw/animation_sign_up" />

    <Button
        android:id="@+id/btn_guest_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"
        android:layout_marginTop="80dp"
        android:paddingVertical="10dp"
        android:text="@string/sign_up"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/av_sign_up" />

</androidx.constraintlayout.widget.ConstraintLayout>